fpstudy: Use ChromeOS fingerprint team logo
* Rename old icon as favicon.svg and use this as the favicon, only.
  If we want the favicon to be somewhat distinguishable, we need to
  use this simplified monochrome icon.
* Introduce our common ChromeOS Fingerprint team logo. This is an
  Inkscape colorized version of the favicon.svg to match our
  existing PNG logo. This is surprisingly similar to the original
  PNG version. I saved this SVG back to the team shared folder.

BUG=b:339298572
TEST=None

Change-Id: I8097ac45fe47fc04c4c84908d2e677ce8546ff09
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5550414
Reviewed-by: Tom Hughes <tomhughes@chromium.org>
Commit-Queue: Craig Hesling <hesling@chromium.org>
Tested-by: Craig Hesling <hesling@chromium.org>

--- a/biod/study/analysis-tool/templates/index.html.jinja2
+++ b/biod/study/analysis-tool/templates/index.html.jinja2
@@ -7,8 +7,7 @@ found in the LICENSE file.
 <html lang="en">
 
 <head>
-    <!-- TODO: Replace icon with Chrome OS Fingerprint logo. -->
-    <link rel="icon" href="assets/icon.svg">
+    <link rel="icon" href="assets/favicon.svg">
     <!-- https://github.com/andybrewer/mvp -->
     <link rel="stylesheet" href="assets/mvp.css">
     <!-- Override width specified in mvp.css. This is used for the main tag. -->
@@ -31,7 +30,10 @@ found in the LICENSE file.
 <body>
     <header>
         <nav>
-            <a href="/"><img alt="Logo" src="assets/icon.svg" height="70"></a>
+            <a href="/">
+                <img alt="ChromeOS Fingerprint Logo" src="assets/chromeos-fingerprint-logo.svg" height="70">
+            </a>
+
             <ul>
                 <li><a href="#summary">Summary</a></li>
                 <li><a href="#histograms">Histograms</a>
