fpstudy: Change logo link to point to analysis tool readme
BUG=b:339298572
TEST=None

Change-Id: I1f97430a9a3c4ec28f97cb863c269055802f0687
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5550415
Reviewed-by: Tom Hughes <tomhughes@chromium.org>
Tested-by: Craig Hesling <hesling@chromium.org>
Commit-Queue: Craig Hesling <hesling@chromium.org>

--- a/biod/study/analysis-tool/templates/index.html.jinja2
+++ b/biod/study/analysis-tool/templates/index.html.jinja2
@@ -30,7 +30,7 @@ found in the LICENSE file.
 <body>
     <header>
         <nav>
-            <a href="/">
+            <a href="https://chromium.googlesource.com/chromiumos/platform2/+/HEAD/biod/study/analysis-tool/README.md">
                 <img alt="ChromeOS Fingerprint Logo" src="assets/chromeos-fingerprint-logo.svg" height="70">
             </a>
 
