--- a/camera/app/cros_camera_app/web/index.css
+++ b/camera/app/cros_camera_app/web/index.css
@@ -20,9 +20,25 @@
   box-sizing: border-box;
 }
 
+body {
+  display: grid;
+  grid-template-columns: 1fr 320px;
+  height: 100vh;
+}
+
+#video-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 video {
   display: block;
   margin: 0 auto;
   max-width: 100%;
   max-height: 100vh;
+}
+
+#side-panel {
+  padding: 8px;
 }
