camera: app: Add camera device select dropdown in web server
BUG=b:343626256
TEST=Run `cca web` and check manually

Change-Id: I18c55031383b023ea9d132b9de48a544ca5e44ed
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5604746
Auto-Submit: Shik Chen <shik@chromium.org>
Commit-Queue: Shik Chen <shik@chromium.org>
Tested-by: Shik Chen <shik@chromium.org>
Reviewed-by: Pi-Hsun Shih <pihsun@chromium.org>

--- a/camera/app/cros_camera_app/web/index.css
+++ b/camera/app/cros_camera_app/web/index.css
@@ -41,8 +41,15 @@ video {
 
 #side-panel {
   padding: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
 }
 
 button#play-pause {
   width: 48px;
+}
+
+select#camera-device {
+  min-width: 50%;
 }
