--- a/camera/app/cros_camera_app/web/index.css
+++ b/camera/app/cros_camera_app/web/index.css
@@ -41,15 +41,25 @@ video {
 
 #side-panel {
   padding: 8px;
+
   display: flex;
   flex-direction: column;
   gap: 4px;
+
+  font-size: 16px;
+  font-family: "Noto Sans Mono", monospace;
 }
 
 button#play-pause {
-  width: 48px;
+  font-size: 16px;
+  width: 60px;
 }
 
 select#camera-device {
+  font-size: 16px;
   min-width: 50%;
+}
+
+body.no-turbostat .turbostat {
+  display: none;
 }
