fpstudy: Add name parameter to report generation command
Add name parameter and propagate dynamic name, title, and
description to report template.

BUG=b:339298572
TEST=python -m unittest discover -v -s . -p '*_test.py'
TEST=./run.py report --user-groups-csv="${test_cases}/user_groups.csv" \
       "${test_cases}" "${output}"

Change-Id: I86628da3555edc7b4196f57447c77c2fc69cdb4a
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5619411
Reviewed-by: Firas Sammoura <fsammoura@google.com>
Reviewed-by: Tom Hughes <tomhughes@chromium.org>
Tested-by: Craig Hesling <hesling@chromium.org>
Commit-Queue: Craig Hesling <hesling@chromium.org>

--- a/biod/study/analysis-tool/templates/index.html.jinja2
+++ b/biod/study/analysis-tool/templates/index.html.jinja2
@@ -30,10 +30,10 @@ For help using the MVP CSS/HTML checkout the following resources:
     </style>
 
     <meta charset="utf-8">
-    <meta name="description" content="Fingerprint performance analysis for the FPC1025.">
+    <meta name="description" content="{{overall.find('info').get('description')}}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>FPC1025</title>
+    <title>{{overall.find("info").get("name")}}</title>
 
     <script type="text/javascript">window.PlotlyConfig = {MathJaxConfig: 'local'};</script>
     <script src="assets/plotly.min.js"></script>
@@ -67,7 +67,7 @@ For help using the MVP CSS/HTML checkout the following resources:
             </ul>
         </nav>
 
-        <h1>Fingerprint Performance Analysis for FPC1025</h1>
+        <h1>{{overall.find("info").get("title")}}</h1>
         <p>
             Chrome OS Fingerprint Team
             (<a href="mailto:chromeos-fingerprint@google.com">
