--- a/biod/study/analysis-tool/templates/index.html.jinja2
+++ b/biod/study/analysis-tool/templates/index.html.jinja2
@@ -2,6 +2,18 @@
 Copyright 2022 The Chromium OS Authors. All rights reserved.
 Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file.
+
+For help using the MVP CSS/HTML checkout the following resources:
+
+* Info about each HTML tag and links to more resources:
+  https://andybrewer.github.io/mvp/#html
+
+* Example site using all HTML tags supported by MVP:
+  https://andybrewer.github.io/mvp/mvp.html
+  https://github.com/andybrewer/mvp/blob/v1.8/mvp.html
+
+* The <section> tag is centered and <article> tag is left justified.
+* The <figure> tag allows for adding a <figcaption> description.
 -#}
 <!DOCTYPE html>
 <html lang="en">
@@ -263,131 +275,6 @@ found in the LICENSE file.
                 {%- endfor %}
             </dl>
         </article>
-
-
-        <hr>
-
-        <!-- ############################################################### -->
-
-        <!-- Start Extra Functionality -->
-        <details>
-        <summary>Extra Functionality</summary>
-        <section>
-            <header>
-                <h2>Section Heading</h2>
-                <p>Section Subheading</p>
-            </header>
-            <aside>
-                <h3>Card heading</h3>
-                <p>Card content*</p>
-                <p><small>*with small content</small></p>
-            </aside>
-            <aside>
-                <h3>Card heading</h3>
-                <p>Card content <sup>with notification</sup></p>
-            </aside>
-            <aside>
-                <h3>Card heading</h3>
-                <p>Card content</p>
-            </aside>
-        </section>
-
-        <hr>
-
-        <section>
-            <blockquote>
-                "Quote"
-                <footer><i>- Attribution</i></footer>
-            </blockquote>
-        </section>
-
-        <hr>
-
-        <section>
-            <table>
-                <thead>
-                    <tr>
-                        <th></th>
-                        <th>Col A</th>
-                        <th>Col B</th>
-                        <th>Col C</th>
-                    </tr>
-                </thead>
-                <tr>
-                    <td>Row 1</td>
-                    <td>Cell A1</td>
-                    <td>Cell B1</td>
-                    <td>Cell C1</td>
-                </tr>
-                <tr>
-                    <td>Row 2</td>
-                    <td>Cell A2</td>
-                    <td>Cell B2</td>
-                    <td>Cell C2</td>
-                </tr>
-            </table>
-        </section>
-
-        <hr>
-
-        <article>
-            <h2>Left-aligned header</h2>
-            <p>Left-aligned paragraph</p>
-            <aside>
-                <p>Article callout</p>
-            </aside>
-            <ul>
-                <li>List item 1</li>
-                <li>List item 2</li>
-            </ul>
-            <figure>
-                <img alt="Stock photo" src="https://via.placeholder.com/1080x500?text=Amazing+stock+photo">
-                <figcaption><i>Image caption</i></figcaption>
-            </figure>
-        </article>
-
-        <hr>
-
-        <div>
-            <details>
-                <summary>Expandable title</summary>
-                <p>Revealed content</p>
-            </details>
-            <details>
-                <summary>Another expandable title</summary>
-                <p>More revealed content</p>
-            </details>
-            <br>
-            <p>Inline <code>code</code> snippets</p>
-            <pre>
-                <code>
-// preformatted code block
-                </code>
-            </pre>
-        </div>
-
-        <hr>
-
-        <section>
-            <form>
-                <header>
-                    <h2>Form title</h2>
-                </header>
-                <label for="input1">Input label:</label>
-                <input type="text" id="input1" name="input1" size="20" placeholder="Input1">
-                <label for="select1">Select label:</label>
-                <select id="select1">
-                    <option value="option1">option1</option>
-                    <option value="option2">option2</option>
-                </select>
-                <label for="textarea1">Textarea label:</label>
-                <textarea cols="40" rows="5" id="textarea1"></textarea>
-                <button type="submit">Submit</button>
-            </form>
-        </section>
-        </details>
-        <!-- End Extra Functionality -->
-
     </main>
 
     <footer>
