patchpanel: ip6tables: open port 546
For DHCPv6.

BUG=b:350884946
TEST=unit

Change-Id: Ib6bc9ffa7d892ba2088f095e0a78778bf681c8e2
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5771495
Reviewed-by: Jie Jiang <jiejiang@chromium.org>
Tested-by: Taoyu Li <taoyl@chromium.org>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>
Commit-Queue: Taoyu Li <taoyl@chromium.org>

--- a/patchpanel/iptables/iptables.start.jinja2
+++ b/patchpanel/iptables/iptables.start.jinja2
@@ -165,6 +165,7 @@ COMMIT
 -A INPUT -p icmp -j ACCEPT
 {% elif ipv6 -%}
 -A INPUT -p ipv6-icmp -j ACCEPT
+-A INPUT -p udp -m udp --dport 546 -j ACCEPT
 {% endif -%}
 -A INPUT -j ingress_port_firewall
 -A INPUT -j ingress_downstream_network
